a729744 (HEAD, 7.x-1.x) Issue #1420290 by interdruper: Added autowrap and line highlighting options to admin panel.
d44843f (origin/HEAD, origin/7.x-1.x) Issue #2270799 by Alex Bukach: Not working when library is not in sites/all/libraries. Added dependency from Libraries API module.
7dac151 Added CHANGELOG.txt file.
22398f8 Issue #2287147 by tonylegrone: Add new custom permission for the config page of the module
b0fb30d (tag: 7.x-1.1) #2230725 by Growiel,tempo22: Update the README to specify that we need to use a version of Ace > 1.0.0 and update the download links to reflect that
b41f13d Issue #2227443 by Growiel: Editor is now able to calculate its own height
a9c2e91 (tag: 7.x-1.0) Small tweaks to the README and fix a comment in ace_editor_install. We're ready for a stable release.
f553f37 Issue #1425558 by Amitaibu: change the way we include JS files to prevent conflicts
ab94907 Issue #1933320 by Growiel: remplace .html by .text to allow the use of <script> tags
66efca2 Issue #2090921 by tjerah: Don't preprocess the JS to make them work with aggregated. Issue #2192611 by growiel: Don't remove the first letter and allow multiple instance of the exact same code
cd6e878 (tag: 7.x-1.0-alpha12) FIxed a bug where the settings for the API didn't apply.
f188389 Updated README.
108b540 Changed attributes on the <pre> tag to reflect css attributes better to avoid confusion.
0267269 Updated README.
5fe89f3 Updated README.
0a497de (tag: 7.x-1.0-alpha11) Added documentation.
4ad9b3e No longer uses localStorage if browser does not support it.
148ebb3 Issue #1417680 by nylin: Resize editors and make changes persistent.
64efcde Issue #1415160 by nylin: Activating Ace editor reveals summary field.
457d461 (tag: 7.x-1.0-alpha10) Added all themes and modes to all places the editor could be used.
10acda8 Updated README to document all new themes and modes added.
1a563c7 Issue #1415420 by nylin: More syntax highligting options